--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,5 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PaymentActivity" />
+        <activity android:name=".RefundActivity" />
+        <activity android:name=".QueryActivity"/>
+        <activity android:name=".CloseActivity"/>
     </application>
 </manifest>
