--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,5 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation project(path: ':wisecashier_ecr_sdk')
+    implementation 'com.github.paycloud-open:ecr-hub-client-sdk-android:1.0.2'
 }
