--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ allprojects {
         maven {
             url 'https://maven.aliyun.com/repository/public/'
         }
+        maven { url 'https://jitpack.io' }
         maven {
             url 'https://maven.aliyun.com/nexus/content/groups/public/'
         }
