--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "com.wisecahsier.ecr.demo"
+        applicationId "com.codepay.register.sdk.demo"
         minSdkVersion 27
         targetSdkVersion 29
         versionCode 1
@@ -38,6 +38,6 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation project(path: ':wisecashier_ecr_sdk')
+    implementation project(path: ':codepay_register_sdk')
     //implementation 'com.github.paycloud-open:ecr-hub-client-sdk-android:1.0.2'
 }
