--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.codepay.register.sdk.demo">
+
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -12,20 +13,30 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true">
         <activity
             android:name="com.codepay.register.sdk.demo.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.codepay.register.sdk.demo.PaymentActivity" />
-        <activity android:name="com.codepay.register.sdk.demo.CloseActivity" />
-        <activity android:name="com.codepay.register.sdk.demo.QueryActivity" />
-        <activity android:name="com.codepay.register.sdk.demo.RefundActivity" />
+        <activity
+            android:name="com.codepay.register.sdk.demo.PaymentActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.codepay.register.sdk.demo.CloseActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.codepay.register.sdk.demo.QueryActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.codepay.register.sdk.demo.RefundActivity"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
