add new project

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,27 +6,12 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "com.codepay.register.sdk.demo"
+        applicationId "com.wiseasy.ecr.sdk.demo"
         minSdkVersion 27
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-        ndk {
-            abiFilters 'armeabi', 'armeabi-v7a', 'x86'
-        }
-
-        compileOptions {
-            sourceCompatibility JavaVersion.VERSION_1_8
-            targetCompatibility JavaVersion.VERSION_1_8
-        }
-
-        manifestPlaceholders = [
-                JPUSH_PKGNAME: applicationId,
-                JPUSH_APPKEY : "682fa8f9c27e4e2504081f8b", //JPush 上注册的包名对应的 Appkey.
-                JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
-        ]
     }
     buildTypes {
         release {
@@ -38,6 +23,6 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation project(path: ':codepay_register_sdk')
+    implementation project(path: ':wiseasy_ecr_sdk')
     //implementation 'com.github.paycloud-open:ecr-hub-client-sdk-android:1.0.2'
 }
