--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':codepay_register_sdk'
-rootProject.name='codepay_register_sdk_demo'
+include ':app', ':wiseasy_ecr_sdk'
+rootProject.name='wiseasy_ecr_sdk_demo'
