--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.codepay.register.sdk.demo">
+    package="com.wiseasy.ecr.sdk.demo">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -17,9 +18,9 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true">
         <activity
-            android:name="com.codepay.register.sdk.demo.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="fullSensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,16 +28,31 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.codepay.register.sdk.demo.PaymentActivity"
-            android:screenOrientation="portrait" />
+            android:name=".WLanActivity"
+            android:screenOrientation="fullSensor" />
         <activity
-            android:name="com.codepay.register.sdk.demo.CloseActivity"
-            android:screenOrientation="portrait" />
+            android:name=".UsbActivity"
+            android:screenOrientation="fullSensor" />
         <activity
-            android:name="com.codepay.register.sdk.demo.QueryActivity"
-            android:screenOrientation="portrait" />
+            android:name=".PaymentActivity"
+            android:screenOrientation="fullSensor" />
         <activity
-            android:name="com.codepay.register.sdk.demo.RefundActivity"
-            android:screenOrientation="portrait" />
+            android:name=".CloseActivity"
+            android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".QueryActivity"
+            android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".RefundActivity"
+            android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".CashBackActivity"
+            android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".AuthActivity"
+            android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".AuthCompleteActivity"
+            android:screenOrientation="fullSensor" />
     </application>
 </manifest>
