--- a/ecr_sdk/build.gradle
+++ b/ecr_sdk/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 29
@@ -47,4 +48,18 @@ dependencies {
     implementation 'org.java-websocket:Java-WebSocket:1.4.0'
     api 'com.squareup.retrofit2:retrofit:2.7.1'
     api 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
+}
+
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'com.github.paycloud-open'
+            artifactId = 'ecrhub-client-sdk-android'
+            version = '1.0.3'
+
+            afterEvaluate {
+                from components.release
+            }
+        }
+    }
 }
