--- a/ecr_sdk/build.gradle
+++ b/ecr_sdk/build.gradle
@@ -38,7 +38,7 @@ android {
 }
 
 dependencies {
-    implementation(name:'WiseSdk_EcrHost_1.01_00a_24072601',ext:'aar')
+//    implementation(name:'WiseSdk_EcrHost_1.01_00a_24072601',ext:'aar')
     // OkHttp
     api "com.squareup.okhttp3:okhttp:4.9.2"
     api 'androidx.appcompat:appcompat:1.0.0'
@@ -55,7 +55,7 @@ publishing {
         release(MavenPublication) {
             groupId = 'com.github.paycloud-open'
             artifactId = 'ecrhub-client-sdk-android'
-            version = '1.0.4'
+            version = '1.0.5'
 
             afterEvaluate {
                 from components.release
